src/test/resources/highlighting/EmptyIds.cirjson
{
  "__cirJsonId__": <error descr="CirJSON standard does not allow empty ID">""</error>,
  "array": [<error descr="CirJSON standard does not allow empty ID">""</error>]
}
